--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Ifeoluwa Ladipo",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
+    "graphql": "^16.6.0",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
