--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
+    "mongoose": "^6.6.5",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
